Using table transport from NuGet package. Setting console buffer width to 80.

--- a/AzurePerfTools.PowerShellServerConsole/App.config
+++ b/AzurePerfTools.PowerShellServerConsole/App.config
@@ -1,29 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <extensions>
       <bindingExtensions>
-        <add
-          name="azureTableTransportBinding"
-          type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel"/>
+        <add name="azureTableTransportBinding" type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel" />
       </bindingExtensions>
     </extensions>
     <bindings>
       <azureTableTransportBinding>
-        <binding
-          name="PowerShellServer"
-          deploymentId="00000000000000000000000000000000"
-          role="SomeRole"
-          instance="SomeRole_IN_0" />
+        <binding name="PowerShellServer" deploymentId="00000000000000000000000000000000" role="SomeRole" instance="SomeRole_IN_0" />
       </azureTableTransportBinding>
     </bindings>
     <services>
       <service name="AzurePerfTools.PowerShellServerConsole.RemotePowerShellCommands">
-        <endpoint
-          address="azure.table:PerfCommands"
-          binding="azureTableTransportBinding"
-          bindingConfiguration="PowerShellServer"
-          contract="AzurePerfTools.PowerShellContracts.IRemotePowerShellCommands" />
+        <endpoint address="azure.table:PerfCommands" binding="azureTableTransportBinding" bindingConfiguration="PowerShellServer" contract="AzurePerfTools.PowerShellContracts.IRemotePowerShellCommands" />
       </service>
     </services>
   </system.serviceModel>
@@ -32,5 +22,11 @@
   </startup>
   <runtime>
     <NetFx40_LegacySecurityPolicy enabled="false" />
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
 </configuration>
