--- a/AzurePerfTools.PowerShellClientConsole/App.config
+++ b/AzurePerfTools.PowerShellClientConsole/App.config
@@ -1,36 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <extensions>
       <bindingExtensions>
-        <add
-          name="azureTableTransportBinding"
-          type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel"/>
+        <add 
+          name="azureTableTransportBinding" 
+          type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel" />
       </bindingExtensions>
     </extensions>
     <bindings>
       <azureTableTransportBinding>
-        <binding
-          name="azureTableTransportBinding_IRemotePowerShellCommands"
-          deploymentId="00000000000000000000000000000000"
-          role="SomeRole"
-          instance="SomeRole_IN_0"
-          closeTimeout="00:10:00"
-          openTimeout="00:10:00"
-          receiveTimeout="00:10:00"
+        <binding 
+          name="azureTableTransportBinding_IRemotePowerShellCommands" 
+          deploymentId="00000000000000000000000000000000" 
+          role="SomeRole" 
+          instance="SomeRole_IN_0" 
+          closeTimeout="00:10:00" 
+          openTimeout="00:10:00" 
+          receiveTimeout="00:10:00" 
           sendTimeout="00:10:00" />
       </azureTableTransportBinding>
     </bindings>
     <client>
-      <endpoint
-        address="azure.table:PerfCommands"
-        binding="azureTableTransportBinding"
-        bindingConfiguration="azureTableTransportBinding_IRemotePowerShellCommands"
-        contract="AzurePerfTools.PowerShellContracts.IRemotePowerShellCommands"
+      <endpoint 
+        address="azure.table:PerfCommands" 
+        binding="azureTableTransportBinding" 
+        bindingConfiguration="azureTableTransportBinding_IRemotePowerShellCommands" 
+        contract="AzurePerfTools.PowerShellContracts.IRemotePowerShellCommands" 
         name="PowerShellClient" />
     </client>
   </system.serviceModel>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
