--- a/AzurePerfTools.PowerShellWindowsService/App.config
+++ b/AzurePerfTools.PowerShellWindowsService/App.config
@@ -1,28 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <extensions>
       <bindingExtensions>
-        <add
-          name="azureTableTransportBinding"
-          type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel"/>
+        <add 
+          name="azureTableTransportBinding" 
+          type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel" />
       </bindingExtensions>
     </extensions>
     <bindings>
       <azureTableTransportBinding>
-        <binding
-          name="PowerShellServer"
-          deploymentId="00000000000000000000000000000000"
-          role="SomeRole"
+        <binding 
+          name="PowerShellServer" 
+          deploymentId="00000000000000000000000000000000" 
+          role="SomeRole" 
           instance="SomeRole_IN_0" />
       </azureTableTransportBinding>
     </bindings>
     <services>
       <service name="AzurePerfTools.PowerShellServerConsole.RemotePowerShellCommands">
-        <endpoint
-          address="azure.table:PerfCommands"
-          binding="azureTableTransportBinding"
-          bindingConfiguration="PowerShellServer"
+        <endpoint 
+          address="azure.table:PerfCommands" 
+          binding="azureTableTransportBinding" 
+          bindingConfiguration="PowerShellServer" 
           contract="AzurePerfTools.PowerShellContracts.IRemotePowerShellCommands" />
       </service>
     </services>
@@ -32,5 +32,11 @@
   </startup>
   <runtime>
     <NetFx40_LegacySecurityPolicy enabled="false" />
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
 </configuration>
