Fixed some issues with the service not starting.

--- a/AzurePerfTools.PowerShellWindowsService/App.config
+++ b/AzurePerfTools.PowerShellWindowsService/App.config
@@ -1,32 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <system.serviceModel>
-    <extensions>
-      <bindingExtensions>
-        <add 
-          name="azureTableTransportBinding" 
-          type="AzurePerfTools.TableTransportChannel.AzureTableTransportBindingCollectionElement, AzurePerfTools.TableTransportChannel" />
-      </bindingExtensions>
-    </extensions>
-    <bindings>
-      <azureTableTransportBinding>
-        <binding 
-          name="PowerShellServer" 
-          deploymentId="00000000000000000000000000000000" 
-          role="SomeRole" 
-          instance="SomeRole_IN_0" />
-      </azureTableTransportBinding>
-    </bindings>
-    <services>
-      <service name="AzurePerfTools.PowerShellServerConsole.RemotePowerShellCommands">
-        <endpoint 
-          address="azure.table:PerfCommands" 
-          binding="azureTableTransportBinding" 
-          bindingConfiguration="PowerShellServer" 
-          contract="AzurePerfTools.PowerShellContracts.IRemotePowerShellCommands" />
-      </service>
-    </services>
-  </system.serviceModel>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -36,6 +9,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.WindowsAzure.ServiceRuntime" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
