Fixed nuget package references.

--- a/AzurePerfTools.PowerShellWindowsService/AzurePerfTools.PowerShellWindowsService.csproj
+++ b/AzurePerfTools.PowerShellWindowsService/AzurePerfTools.PowerShellWindowsService.csproj
@@ -34,8 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AzurePerfTools.TableTransportChannel">
-      <HintPath>..\packages\AzureTableWcfTransport.1.0.0\lib\net45\AzurePerfTools.TableTransportChannel.dll</HintPath>
+    <Reference Include="AzurePerfTools.TableTransportChannel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AzureTableWcfTransport.1.0.1\lib\net45\AzurePerfTools.TableTransportChannel.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.Edm, Version=5.6.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -99,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="InstallRemotePS.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
